# kvcache-exploration

./: .gitignore  PLAN.md  README.md  pyproject.toml
scripts/: demo_quadratic.py  diag_cacheoff_root.py  memory_report.py  smoke_emoji.py  smoke_flush.py  smoke_leak.py  smoke_stop.py  smoke_ws.py  verify_against_hf.py
src/kvcache_explored/: __init__.py  chat_template.py  engine.py  generate.py  kvcache.py  memory.py  model.py  sampling.py  schemas.py  server.py  weights.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  store.ts  styles.css  theme.ts
web/src/components/: Chat.tsx  KVCacheBar.tsx  KVLayerHeatmap.tsx  LatencyChart.tsx  MemoryChart.tsx  StatusBar.tsx  Telemetry.tsx
web/src/hooks/: useChatSocket.ts  useTelemetrySocket.ts  useTokenCount.ts
web/src/types/: ws.ts
