[project]
name = "kvcache-explored"
version = "0.1.0"
description = "Minimal Qwen3-0.6B PyTorch implementation on Apple Silicon with a live memory+latency UI that makes the cost of KV cache visible."
authors = [{ name = "Rick Lamers", email = "ricklamers@gmail.com" }]
requires-python = ">=3.12,<3.13"
dependencies = [
  "torch>=2.4",
  "safetensors>=0.4",
  "huggingface_hub>=0.24",
  "tokenizers>=0.20",
  "transformers>=4.51",
  "jinja2>=3.1",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "websockets>=12",
  "pydantic>=2.7",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
